<resources>
    <string name="app_name">PlayTabs</string>
    <string name="btn_iniciarSesion">Iniciar Sesión</string>
    <string name="btn_iniciarRegister">Registrarse</string>
    <string name="img_mainPick">pick</string>
    <string name="img_loginBack">login background</string>
    <string name="img_mainLogo">main loogo</string>
    <string name="txt_correo">Correo Electrónico</string>
    <string name="txt_contraseña">Contraseña</string>
    <string name="img_iniciarLogo">logo iniciar</string>
    <string name="img_pickIniciar">pick iniciar</string>
    <string name="img_iniciarBack">back iniciar</string>
    <string name="txt_terminos">Acepto los términos y condiciones del servicio</string>
    <string name="img_regisLogo">regis logo</string>
    <string name="img_regisPick">regis pick</string>
    <string name="img_regisBack">regis back</string>
    <string name="txt_tabs_momento">Las canciones del momento son:</string>
    <string name="btn_buscar">Buscar</string>
    <string name="input_nom_tab">Quiero aprender a tocar...</string>
    <string name="txt_welcome_user">¡Hola de nuevo!</string>ç
    <string name="txt_nombre_user">user_name</string>
    <string name="txt_userRegis">Nombre de usuario</string>
    <string name="rv_tabsh_txtNombreC">Canción:</string>
    <string name="rv_tabsh_txtArtista">Artista:</string>
    <string name="txt_siguiente_cancion">¿Qué canción quieres aprender?</string>
    <string name="txt_nombreTab">nombre_canción</string>
    <string name="txt_nombreArtista">nombre_artista</string>
    <string name="btn_profile">Mi Perfil</string>
    <string name="btn_favTabs">Favoritos</string>
    <string name="btn_soporte">Soprte y Contacto</string>
    <string name="btn_cerrarS">Cerrar Sesión</string>
    <string name="txt_favTabs">Tablaturas Favoritas</string>
    <string name="btn_cambiarNombre">Cambiar Nombre de Usuario</string>
    <string name="btn_cambiarImagen">Cambiar Foto de Perfil</string>
    <string name="txt_contacto">Si tienes algún problema con la aplicación
    o quieres enviarnos sugerencias, contacta con nosotros en el siguiente correo:</string>
    <string name="txt_correoContacto">support@playtabs.com</string>
    <string name="img_tabview">img_tabview</string>


</resources>