<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    tools:context=".iniciar_sesion_activity">

    <ImageView
        android:id="@+id/img_inciarLogo"
        android:layout_width="331dp"
        android:layout_height="119dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="98dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotabs1"
        android:contentDescription="@string/img_iniciarLogo" />

    <ImageView
        android:id="@+id/img_iniciarBack"
        android:layout_width="382dp"
        android:layout_height="450dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="95dp"
        android:alpha="0.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_inciarLogo"
        app:srcCompat="@drawable/login_background"
        android:contentDescription="@string/img_iniciarBack" />

    <ImageView
        android:id="@+id/img_iniciarPick"
        android:layout_width="111dp"
        android:layout_height="90dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_inciarLogo"
        app:srcCompat="@drawable/pick"
        android:contentDescription="@string/img_pickIniciar" />

    <TextView
        android:id="@+id/txt_correoIniciar"
        android:layout_width="282dp"
        android:layout_height="51dp"
        android:layout_marginTop="144dp"
        android:fontFamily="@font/sriracha"
        android:gravity="center"
        android:text="@string/txt_correo"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_inciarLogo" />

    <TextView
        android:id="@+id/txt_passIniciar2"
        android:layout_width="282dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sriracha"
        android:gravity="center"
        android:text="@string/txt_contraseña"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_correoIniciar" />

    <EditText
        android:id="@+id/input_correoIniciar"
        android:layout_width="312dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:ems="10"
        android:fontFamily="@font/sriracha"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_correoIniciar"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/input_passIniciar"
        android:layout_width="312dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:fontFamily="@font/sriracha"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_passIniciar2"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_iniciar"
        android:layout_width="174dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_radius"
        android:fontFamily="@font/sriracha"
        android:onClick="iniciar"
        android:text="@string/btn_iniciarSesion"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_passIniciar" />

</androidx.constraintlayout.widget.ConstraintLayout>