<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    tools:context=".registrarse_activity">

    <ImageView
        android:id="@+id/img_regisBack"
        android:layout_width="387dp"
        android:layout_height="681dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="95dp"
        android:alpha="0.2"
        android:contentDescription="@string/img_regisBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_background" />

    <ImageView
        android:id="@+id/img_regisPick"
        android:layout_width="111dp"
        android:layout_height="90dp"
        android:contentDescription="@string/img_regisPick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pick"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txt_correoRegis"
        android:layout_width="282dp"
        android:layout_height="51dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/sriracha"
        android:gravity="center"
        android:text="@string/txt_correo"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_userRegis"
        android:layout_width="282dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/sriracha"
        android:gravity="center"
        android:text="@string/txt_userRegis"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_correoRegis" />

    <TextView
        android:id="@+id/txt_passRegis"
        android:layout_width="282dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sriracha"
        android:gravity="center"
        android:text="@string/txt_contraseña"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_userRegis" />

    <EditText
        android:id="@+id/input_correoRegis"
        android:layout_width="312dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:ems="10"
        android:fontFamily="@font/sriracha"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_correoRegis"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/input_userRegis"
        android:layout_width="312dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:ems="10"
        android:fontFamily="@font/sriracha"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_userRegis"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/input_passRegis"
        android:layout_width="312dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:fontFamily="@font/sriracha"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_passRegis"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/check_terminosRegis"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_background"
        android:fontFamily="@font/sriracha"
        android:gravity="center"
        android:text="@string/txt_terminos"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_passRegis" />

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="174dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_radius"
        android:fontFamily="@font/sriracha"
        android:onClick="registrarse"
        android:text="@string/btn_iniciarRegister"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_terminosRegis" />

</androidx.constraintlayout.widget.ConstraintLayout>