<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    tools:context=".perfil_activity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_profileUserPic"
        android:layout_width="131dp"
        android:layout_height="134dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        app:srcCompat="@drawable/user_pic" />

    <TextView
        android:id="@+id/txt_profileUserName"
        android:layout_width="303dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sriracha"
        android:gravity="center"
        android:text="@string/txt_nombre_user"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profileUserPic" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="394dp"
        android:layout_height="458dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_profileUserName"
        app:srcCompat="@drawable/input_background" />

    <Button
        android:id="@+id/btn_cambiarNombre"
        android:layout_width="311dp"
        android:layout_height="63dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/button_radius"
        android:fontFamily="@font/sriracha"
        android:onClick="cambiar_userName"
        android:text="@string/btn_cambiarNombre"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_profileUserName" />

    <Button
        android:id="@+id/btn_cambiarFoto"
        android:layout_width="311dp"
        android:layout_height="63dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_radius"
        android:fontFamily="@font/sriracha"
        android:onClick="cambiar_foto"
        android:text="@string/btn_cambiarImagen"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cambiarNombre" />
</androidx.constraintlayout.widget.ConstraintLayout>